# JS-808-Ultra

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/dsp/: ClipWDFa.h  ClipWDFb.h  ClipWDFc.h  ClippingStage.cpp  ClippingStage.h  DryComp.cpp  DryComp.h  DryLPF.cpp  DryLPF.h  ToneStage.cpp  ToneStage.h
